--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <a href="about.html">关于我们</a>
                 </div>
                 <div class="user-area">
-                    <a href="#" class="btn">提交资源</a>
-                    <a href="#" class="btn primary">登录/注册</a>
+                    <!-- 如果想保留空间但不显示按钮，可以留空 -->
+                    <!-- 或者添加其他内容，如搜索图标等 -->
                 </div>
             </header>
 
