--- a/about.html
+++ b/about.html
@@ -115,8 +115,7 @@
                     <a href="about.html" class="active">关于我们</a>
                 </div>
                 <div class="user-area">
-                    <a href="#" class="btn">提交资源</a>
-                    <a href="#" class="btn primary">登录/注册</a>
+                    <!-- 留空或添加其他非按钮内容 -->
                 </div>
             </header>
 
