--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
             <!-- 网站logo和标语 -->
             <div class="hero">
-                <img src="logo.svg" alt="学知集" class="logo-large">
-                <h1>学知集</h1>
+                <div class="hero-title">
+                    <img src="logo.svg" alt="学知集" class="logo-large">
+                    <h1>学知集</h1>
                 <p class="tagline">聚焦K12优质教育资源，让学习更高效</p>
             </div>
 
