--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                     <a href="about.html">关于我们</a>
                 </div>
                 <div class="user-area">
-                    <!-- 如果想保留空间但不显示按钮，可以留空 -->
-                    <!-- 或者添加其他内容，如搜索图标等 -->
+                    <!-- 空白区域 -->
                 </div>
             </header>
 
@@ -70,6 +69,7 @@
                 <div class="hero-title">
                     <img src="logo.svg" alt="学知集" class="logo-large">
                     <h1>学知集</h1>
+                </div>
                 <p class="tagline">聚焦K12优质教育资源，让学习更高效</p>
             </div>
 
