--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                     <a href="about.html" class="active">关于我们</a>
                 </div>
                 <div class="user-area">
-                    <!-- 留空或添加其他非按钮内容 -->
+                    <!-- 空白区域 -->
                 </div>
             </header>
 
