--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="about.html">关于我们</a>
                 </div>
                 <div class="user-area">
-                    <!-- 空白区域 -->
+                    <!-- 留空，移除按钮 -->
                 </div>
             </header>
 
