--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                 </div>
             </header>
 
+            <!-- 网站logo和标语 -->
+            <div class="hero">
+                <div class="hero-title">
+                    <img src="logo.svg" alt="学知集" class="logo-large">
+                    <h1>学知集</h1>
+                </div>
+                <p class="tagline">聚焦K12优质教育资源，让学习更高效</p>
+            </div>
+
             <!-- 搜索栏 -->
             <div class="search-container">
                 <input type="text" placeholder="搜索K12教育资源..." class="search-input">
