--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 </div>
             </header>
 
-            <!-- 网站logo和标语 -->
-            <div class="hero">
+            <!-- 在搜索栏之前添加hero部分 -->
+            <div class="hero" style="display:block !important; visibility:visible !important;">
                 <div class="hero-title">
                     <img src="logo.svg" alt="学知集" class="logo-large">
                     <h1>学知集</h1>
