--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
         <div class="main-content">
             <!-- 顶部导航 -->
             <header class="top-nav">
+                <div class="left-nav">
+                    <button class="menu-toggle">
+                        <span class="icon">≡</span>
+                    </button>
+                    <a href="#" class="site-title">学知集</a>
+                    <span class="dropdown-icon">▼</span>
+                </div>
                 <div class="nav-links">
-                    <a href="#" class="active">学知集</a>
                     <a href="#">小学资源</a>
                     <a href="#">初中资源</a>
                     <a href="#">高中资源</a>
@@ -45,11 +51,8 @@
                     <a href="#">教育资讯</a>
                     <a href="about.html">关于我们</a>
                 </div>
-                <div class="user-area">
-                    <!-- 用户区域内容已移除 -->
-                </div>
             </header>
-
+    
             <!-- 在搜索栏之前添加hero部分 -->
             <div class="hero" style="display:block !important; visibility:visible !important;">
                 <div class="hero-title">
