--- a/index.html
+++ b/index.html
@@ -34,15 +34,8 @@
 
         <!-- 主内容区 -->
         <div class="main-content">
-            <!-- 顶部导航 -->
+            <!-- 顶部导航 - 简化版本 -->
             <header class="top-nav">
-                <div class="left-nav">
-                    <button class="menu-toggle">
-                        <span class="icon">≡</span>
-                    </button>
-                    <a href="#" class="site-title">学知集</a>
-                    <span class="dropdown-icon">▼</span>
-                </div>
                 <div class="nav-links">
                     <a href="#">小学资源</a>
                     <a href="#">初中资源</a>
