--- a/index.html
+++ b/index.html
@@ -34,14 +34,10 @@
 
         <!-- 主内容区 -->
         <div class="main-content">
-            <!-- 顶部导航 - 简化版本 -->
+            <!-- 顶部导航 -->
             <header class="top-nav">
+                <!-- 删除left-nav部分 -->
                 <div class="nav-links">
-                    <a href="#">小学资源</a>
-                    <a href="#">初中资源</a>
-                    <a href="#">高中资源</a>
-                    <a href="#">每日精选</a>
-                    <a href="#">教育资讯</a>
                     <a href="about.html">关于我们</a>
                 </div>
             </header>
