--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <!-- 左侧导航栏 -->
         <div class="sidebar">
             <div class="logo">
-                <img src="logo.svg" alt="学知集">
-                <h1>学知集</h1>
+                <img src="logo.svg" alt="学之">
+                <h1>学之</h1>
             </div>
             
             <nav class="main-nav">
